--- a/todo
+++ b/todo
@@ -26,3 +26,5 @@ add text to voice
 --------------
 add chapter files download continue, incase of err
 ------------
+can have turbo mode user controled for first table of content chapter links scrapping
+--------------
