--- a/todo
+++ b/todo
@@ -36,3 +36,6 @@ add chapter collection resume function when there interference or failure
 https://ranobes.net/
 prserve new line when converting to text
 ------------------
+find mo effective ways to remove unwanted chars in a name
+static/epubs/The Entire Mankind is Acting As Me... - Chapter 1  Human Observation Program  All of humanity is missing  - Chapter 3: Where Did Everyone Go?! 
+-------------------
