--- a/todo
+++ b/todo
@@ -39,3 +39,4 @@ prserve new line when converting to text
 find mo effective ways to remove unwanted chars in a name
 static/epubs/The Entire Mankind is Acting As Me... - Chapter 1  Human Observation Program  All of humanity is missing  - Chapter 3: Where Did Everyone Go?! 
 -------------------
+find ways to close browser opened and left opened when chromium browser get error
